时间复杂度

--- a/THU Data Structure/Note/01.Introduction.md
+++ b/THU Data Structure/Note/01.Introduction.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 算法
 
 ## 算法的概念
@@ -44,8 +46,11 @@ $$
 
 我们想分析当 n 足够大时的时间复杂度，因此需要进行渐进分析。
 
-- 大 $\mathcal{O}$ 记号:首先关注 $T(n)$ 的渐进上界，因此引入大 $\mathcal{O}$ 记
-- 环境差异
-- 基本操作
-- 大$\Omega$记号
-- 大$\Theta$记号
+- 大 $\mathcal{O}$ 记号:首先关注 $T(n)$ 的渐进上界，因此引入大 $\mathcal{O}$ 记号。大 $\mathcal{O}$具有如下性质:
+  - 对于任一常数：$c>0$,有 $O(f(n))= O(c\cdot f(n))$。即在大 $\mathcal{O}$记号的影响下，函数各项正的常系数可以忽略并等同于 1
+  - 对于任意常数：$\mathrm{a~>b~>0,~}$ 有 $O(\mathrm{n}^a+\mathrm{n}^b)= O(\mathrm{n}^a)$。即多项式中的低次项均可被忽略，只需保留最高次项。
+- 环境差异：在实际环境中直接测得的执行时间 $T(n)$，虽然可以作为衡量算法性能的一种指标，但不能作为评判不同算法性能优劣的标准。因为即便是同一算法、同一输入，在不同的硬件平台上、不同的操作系统中甚至不同的时间，所需要的计算时间都不尽相同。
+- 基本操作：**将时间复杂度理解为算法中各条指令的执行时间之和。** 因此只需统计出该算法所执行基本操作的总次数，即可确定$T(n)$的上界。
+- 大$\Omega$记号：如果存在正的常数 $c$ 和函数 $g(n)$ ,使得对于任何$n>>2$都有：$\mathrm{T(n)\geq c\cdot g(n)}$,因此可以认为当 n 足够大时，g(n)给出了一个 $T(n)$ 的渐进下界，记为 $\mathrm{T(n)}=\Omega(\mathrm{g(n)})$。即对于任何规模的 n 的输入，算法的运行时间都不低于 $\Omega(g(n))$。
+- 大$\Theta$记号：借助上述$\mathcal{O}$和$\Omega$可以对算法时间复杂度作出定量的界定。从渐进的趋势来看，$T(n)$介于$\Omega(g(n))$和$O(f(n))$之间。若恰好出现$g(n)=f(n)$的情况，则可以使用另一种记号来表示。如果存在正的常数 $c_1 < c_2$和函数 $h(n)$，使得对于任何 $n>2$ 都有$\mathrm{c_1\cdotp h(n)~\leq~T(n)~\leq~c_2\cdotp h(n)}$当$n$足够大时，$h(n)$给出了一个$T(n)$的一个确界。记为$\mathrm{T(n)}=\Theta(\mathrm{h(n)})。$ **它是对算法复杂度的准确估计--对于规模为$n$的任何输入，算法的运行时间$T(n)$都与$\Theta(\mathrm{h(n)})$同阶.**
+  ![20240307222128](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240307222128.png)
