修改了关于时间复杂度概念的部分

--- a/THU Data Structure/Note/01.Introduction.md
+++ b/THU Data Structure/Note/01.Introduction.md
@@ -54,3 +54,44 @@ $$
 - 大$\Omega$记号：如果存在正的常数 $c$ 和函数 $g(n)$ ,使得对于任何$n>>2$都有：$\mathrm{T(n)\geq c\cdot g(n)}$,因此可以认为当 n 足够大时，g(n)给出了一个 $T(n)$ 的渐进下界，记为 $\mathrm{T(n)}=\Omega(\mathrm{g(n)})$。即对于任何规模的 n 的输入，算法的运行时间都不低于 $\Omega(g(n))$。
 - 大$\Theta$记号：借助上述$\mathcal{O}$和$\Omega$可以对算法时间复杂度作出定量的界定。从渐进的趋势来看，$T(n)$介于$\Omega(g(n))$和$O(f(n))$之间。若恰好出现$g(n)=f(n)$的情况，则可以使用另一种记号来表示。如果存在正的常数 $c_1 < c_2$和函数 $h(n)$，使得对于任何 $n>2$ 都有$\mathrm{c_1\cdotp h(n)~\leq~T(n)~\leq~c_2\cdotp h(n)}$当$n$足够大时，$h(n)$给出了一个$T(n)$的一个确界。记为$\mathrm{T(n)}=\Theta(\mathrm{h(n)})。$ **它是对算法复杂度的准确估计--对于规模为$n$的任何输入，算法的运行时间$T(n)$都与$\Theta(\mathrm{h(n)})$同阶.**
   ![20240307222128](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240307222128.png)
+
+### 空间复杂度
+
+除了执行时间的长短,算法所需存储空间的多少也是衡量其性能的一个重要方面,此即所谓的空间复杂度(space complexity)。实际上,以上针对时间复杂度所引入的几种渐进记号,也适用于对空间复杂度的度量,其原理及方法基本相同,不再赘述.
+
+## 复杂度分析
+
+### 常数复杂度$O(1)$
+
+运行时间可表示和度量为$T(n) = O(1)$的这一类算法，统称作"常数时间复杂度算法"(constant-time algorithm)。此类算法已是最为理想的.
+
+### 对数复杂度$O(\log n)$
+
+以如下问题为例:对于任意非负整数,统计其二进制展开中数位 1 的总数。如$441=(110111001)_2$。根据右移运算的性质，每右移一位，n 都至少缩减一半^[不是长度，是大小，右移除 2]。也就是说，至多经过$1+\lfloor\log_2\mathrm{n}\rfloor$次循环，$n$必然缩至 0，算法结束。
+由大$O$记号定义，在用函数 $\log_r n$ 界定渐进复杂度时，常底数 $r$ 的具体取值无所谓^[常底数无所谓 $\forall\mathrm{~}a,b>1,\mathrm{~}\log_an\mathrm{~}=\boxed{\log_ab}\cdot\log_bn\mathrm{~}=\mathrm{~}\Theta(\log_bn)$]，故通常不予专门标出而笼统地记作$\log n$^[$\forall\left.c>0,\right.\log n^c=\left.c\cdot\log n\right.=\left.\Theta(\log n)\right.$]。
+更一般地，凡运行时间可以表示和度量为 $T(n) = O(\log^c n)$ 形式的这一类算法(其中常数 $c>0$ )，均统称作"对数多项式时间复杂度的算法"(polylogarithmic-time algorithm)
+
+### 线性复杂度$O(n)$
+
+凡运行时间可以表示和度量为$T(n) = O(n)$形式的这一类算法，均统称作"线性时间复杂
+度算法"(linear-time algorithm)
+
+### 多项式复杂度$O(polynomial(n))$
+
+$\begin{aligned}a_k\cdot n^k+a_{k-1}\cdot n^{k-1}+\cdots+a_2\cdot n^2+a_1\cdot n+a_0~=~\mathcal{O}(n^k),~a_k>0\end{aligned}$
+若运行时间可以表示和度量为 $T(n) = O(f(n))$ 的形式，而且 $f(x)$ 为多项式，则对应的算法称作"多项式时间复杂度算法"(polynomial-time algorithm)
+
+### 指数复杂度$O(2^n)$
+
+一般地，凡运行时间可以表示和度量为 $T(n) = O(a^n)$ 形式的算法 $(a > 1)$，均属于"指数时间复杂度算法"(exponential-time algorithm)
+
+### 复杂度层次
+
+![20240309152742](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240309152742.png)
+复杂度的典型层次
+
+$$
+\log n < \sqrt{n} < n < n \log n < n^2 < n^3 < 2^n
+$$
+
+## 递归
