对线性表部分进行了修改

--- a/408数据结构/Note/线性表.md
+++ b/408数据结构/Note/线性表.md
@@ -1,50 +1,58 @@
 # 线性表
 
+# 逻辑结构
+
 ## 线性表的定义和基本操作
 
 ### 线性表的定义
 
-线性表是具有相同数据类型的 $n(n≥0)$ 个数据元素的有限序列,其中 $n$ 为表长,当 $n = 0$ 时线性表是一个空表。若用$L$命名线性表,则其一般表示为
+线性表是**具有相同数据类型的** $n(n≥0)$ 个数据元素的**有限的有序序列**,其中 $n$ 为表长,当 $n = 0$ 时线性表是一个空表.若用$L$命名线性表,则其一般表示为
 
 $$
 L=(a_1,a_2,\cdots,a_i,a_{i+1},\cdots,a_n)
 $$
 
-式中,$a_1$是唯一的"第一个"数据元素,又称**表头元素**。$a_n$是唯一的"最后一个"数据元素,又称**表尾元素**。除第一个元素外,每个元素有且仅有一个直接前驱。除最后一个元素外,每个元素有且仅有一个直接后继("直接前驱"和"前驱"、"直接后继"和"后继"通常被视为同义词)。
+式中,$a_1$是唯一的"第一个"数据元素,又称**表头元素**.$a_n$是唯一的"最后一个"数据元素,又称**表尾元素**.**除第一个元素外,每个元素有且仅有一个直接前驱.除最后一个元素外,每个元素有且仅有一个直接后继**[^1]
+[^1]:"直接前驱"和"前驱"、"直接后继"和"后继"通常被视为同义词
 
 - 线性表的特点:
-  - **表中元素的个数有限**
-  - **表中元素具有逻辑上的顺序性,表中元素有其先后次序**
+  - **表中元素的个数有限[^2]**
+  - **表中元素具有逻辑上的顺序性[^3],表中元素有其先后次序**
   - **表中元素都是数据元素**,每个元素都是单个元素
   - **表中元素的数据类型都相同**,这意味着每个元素占有相同大小的存储空间
   - 表中元素具有抽象性,即仅讨论元素间的逻辑关系,而不考虑元素究竟表示什么内容
 
-> **线性表是一种逻辑结构,表示元素之间一对一的相邻关系。顺序表和链表是指存储结构,两者属于不同层面的概念,因此不要将其混淆**。
+> **线性表是一种逻辑结构,表示元素之间一对一的相邻关系.顺序表和链表是指存储结构,两者属于不同层面的概念,因此不要将其混淆**.
+
+[^2]: 不管是动态存储还是静态存储,即使表中元素的数量会变化,但是其个数一定是有限的.
+[^3]: 并非物理位置上的前后次序
 
 ### 线性表的基本操作
 
 ```c++
-InitList(&L)://初始化表。构造一个空的线性表.
-Length(L)://求表长。返回线性表L的长度,即L中数据元素的个数
-LocateElem(L,e)://按值查找操作。在表L中查找具有给定关键字值的元素
-GetElem(L,i)://按位查找操作。获取表L中第i个位置的元素的值
-ListInsert (&L,i,e)://插入操作。在表L中的第i个位置上插入指定元素e。
-ListDelete(&L, i,&e)://删除操作。删除表L中第i个位置的元素,并用e返回删除元素的值。
-PrintList(L)://输出操作。按前后顺序输出线性表L的所有元素值。
-Empty(L)://判空操作。若L为空表,则返回 true,否则返回 false。
-DestroyList(&L)://销毁操作。销毁线性表,并释放线性表L所占用的内存空间。
+InitList(&L)://初始化表.构造一个空的线性表.
+Length(L)://求表长.返回线性表L的长度,即L中数据元素的个数
+LocateElem(L,e)://按值查找操作.在表L中查找具有给定关键字值的元素
+GetElem(L,i)://按位查找操作.获取表L中第i个位置的元素的值
+ListInsert (&L,i,e)://插入操作.在表L中的第i个位置上插入指定元素e.
+ListDelete(&L, i,&e)://删除操作.删除表L中第i个位置的元素,并用e返回删除元素的值.
+PrintList(L)://输出操作.按前后顺序输出线性表L的所有元素值.
+Empty(L)://判空操作.若L为空表,则返回 true,否则返回 false.
+DestroyList(&L)://销毁操作.销毁线性表,并释放线性表L所占用的内存空间.
 ```
 
-# 线性表的顺序存储-顺序表
+# 物理结构
 
-## 顺序表的定义
+## <font color="red">线性表的顺序存储-顺序表</font>
 
-**线性表的顺序存储又称顺序表。它是用一组地址连续的存储单元依次存储线性表中的数据元素,从而使得逻辑上相邻的两个元素在物理位置上也相邻**。第$1$个元素存储在线性表的起始位置,第 $i$ 个元素的存储位置后面紧接着存储的是第 $i+1$ 个元素,称 $i$ 为元素 $a_i$ 在线性表中的位序。因此,**顺序表的特点是表中元素的逻辑顺序与其物理顺序相同**。
+### 顺序表的定义
 
-假设线性表 L 存储的起始位置为`LOC(A)`,`sizeof(ElemType)`是每个数据元素所占用存储空间的大小,则表 L 所对应的顺序存储为
+**线性表的顺序存储又称顺序表.它是用一组地址连续的存储单元依次存储线性表中的数据元素,从而使得逻辑上相邻的两个元素在物理位置上也相邻**.第$1$个元素存储在线性表的起始位置,第 $i$ 个元素的存储位置后面紧接着存储的是第 $i+1$ 个元素,称 $i$ 为元素 $a_i$ 在线性表中的位序.因此,**顺序表的特点是表中元素的逻辑顺序与其物理顺序相同**.
+
+> 假设线性表 L 存储的起始位置为`LOC(A)`,`sizeof(ElemType)`是每个数据元素所占用存储空间的大小,则表 L 所对应的顺序存储为
 
 ![20231208195300](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231208195300.png)
-**顺序表中的任意一个数据元素都可以随机存取,所以线性表的顺序存储结构是一种随机存取的存储结构。通常用高级程序设计语言中的数组来描述线性表的顺序存储结构**。
+**顺序表中的任意一个数据元素都可以随机存取,所以线性表的顺序存储结构是一种随机存取的存储结构.通常用高级程序设计语言中的数组来描述线性表的顺序存储结构**.
 
 那么线性表的顺序存储类型的静态分配的描述是
 
@@ -75,19 +83,22 @@ L.data=(ElemType*)malloc(sizeof(ELemType)*InitSize)
 C++的初始动态分配语句为
 
 ```c++
-L.data=new ElemType[InitSize]
+L.data=new ElemType[InitSize]//与C语言实现的分配不同,C++的这种分配方式仍要进行元素的搬运
 ```
 
 - 顺序表的特点
+
   - **顺序表最主要的特点是随机访问,即通过首地址和元素序号可在时间$O(1)$内找到指定的元素**
   - **顺序表的存储密度高,每个结点只存储数据元素**
   - 顺序表逻辑上相邻的元素物理上也相邻,所以插入和删除操作需要移动大量元素
 
-## 顺序表的操作
+> 部分初学者可能会把数组等同于顺序表,但是这是非常错误的,这两者是完全不同的数据结构,比如：数组并不能进行删除操作
 
-### 初始化
+### 顺序表的操作
 
-初始化主要包括对 length 变量和 size 变量的初始化。同时还包括了静态分配与动态分配,其区别主要在空间利用上。写算法题的时候需要编写存储类型描述和动静态分配的代码。
+#### 初始化
+
+初始化主要包括对 length 变量和 size 变量的初始化.同时还包括了静态分配与动态分配,其区别主要在空间利用上.写算法题的时候需要编写存储类型描述和动静态分配的代码.
 
 ```c++
 // 静态初始化
@@ -121,11 +132,11 @@ SqList initList()
 }
 ```
 
-### 求表长
+##### 求表长
 
-结构体`SqList`中存储的变量`length`即为当前顺序表的表长。使用`L.length`即可求得
+结构体`SqList`中存储的变量`length`即为当前顺序表的表长.使用`L.length`即可求得
 
-### 遍历输出
+#### 遍历输出
 
 使用下面的代码可以进行遍历输出操作
 
@@ -137,9 +148,9 @@ void listVisit(SqList L)
 }
 ```
 
-### 插入
+#### 插入
 
-在顺序表中进行插入操作的时,首先要判定该插入点是否合法,如果插入点 `i` 不合法,那么应该返回 `false`。如果合法,那么应该把插入点 `i` 后面的所有点依次向后移一位,在点 `i` 处空出一个位置来插入元素。
+在顺序表中进行插入操作的时,首先要判定该插入点是否合法,如果插入点 `i` 不合法,那么应该返回 `false`.如果合法,那么应该把插入点 `i` 后面的所有点依次向后移一位,在点 `i` 处空出一个位置来插入元素.
 
 ```c++
 bool listInsert(SqList &L, int e, int idx)
@@ -158,13 +169,13 @@ bool listInsert(SqList &L, int e, int idx)
 
 根据插入位置的不同,对插入操作的时间复杂度进行如下分析：
 
-- 最好时间复杂度：插入位置在顺序表的表尾。元素不进行移动,时间复杂度为$O(1)$
-- 最差时间复杂度：插入位置在顺序表的表头。所有元素都要进行移动,时间复杂度为$O(n)$
-- 平均时间复杂度：插入位置在顺序表的中间位置。假设第 i 个位置上插入一个结点的概率为$p_i$,则所需移动结点的平均次数为$\sum_{i=1}^{n+1}p_i(n-i+1)=\sum_{i=1}^{n+1}\frac1{n+1}(n-i+1)=\frac1{n+1}\sum_{i=1}^{n+1}(n-i+1)=\frac1{n+1}\frac{n(n+1)}2=\frac n2$。因此,顺序表插入算法的时间复杂度为$O(n)$
+- 最好时间复杂度：插入位置在顺序表的表尾.元素不进行移动,时间复杂度为$O(1)$
+- 最差时间复杂度：插入位置在顺序表的表头.**所有元素都要进行移动**,时间复杂度为$O(n)$
+- 平均时间复杂度：插入位置在顺序表的中间位置.假设第 i 个位置上插入一个结点的概率为$p_i$,则所需移动结点的平均次数为$\sum_{i=1}^{n+1}p_i(n-i+1)=\sum_{i=1}^{n+1}\frac1{n+1}(n-i+1)=\frac1{n+1}\sum_{i=1}^{n+1}(n-i+1)=\frac1{n+1}\frac{n(n+1)}2=\frac n2$.因此,顺序表插入算法的时间复杂度为$O(n)$
 
-### 删除
+#### 删除
 
-删除索引为`idx`上的元素,如果合法,那么将后面的元素向前移,同时返回删除元素的值并且返回`true`。如果位置不合法,则返回`false`
+删除索引为`idx`上的元素,如果合法,那么将后面的元素向前移,同时返回删除元素的值并且返回`true`.如果位置不合法,则返回`false`
 
 ```c++
 bool ListDelete(SqList &L, int idx, int tmp)
@@ -181,11 +192,11 @@ bool ListDelete(SqList &L, int idx, int tmp)
 
 根据删除位置的不同,对删除操作的时间复杂度进行如下分析：
 
-- 最好时间复杂度：删除表尾元素,无需移动。时间复杂度为$O(1)$。
-- 最差时间复杂度：删除表头元素,需移动所有元素。时间复杂度为$O(n)$
-- 平均时间复杂度：假设$p_i$是删除第$i$个位置上结点的概率,则所需移动结点的平均次数为$\sum_{i=1}^np_i(n-i)=\sum_{i=1}^n\frac1n(n-i)=\frac1n\sum_{i=1}^n(n-i)=\frac1n\frac{n(n-1)}2=\frac{n-1}2$,则平均时间复杂度为$O(n)$。
+- 最好时间复杂度：删除表尾元素,无需移动.时间复杂度为$O(1)$.
+- 最差时间复杂度：删除表头元素,**需移动所有元素**.时间复杂度为$O(n)$
+- 平均时间复杂度：假设$p_i$是删除第$i$个位置上结点的概率,则所需移动结点的平均次数为$\sum_{i=1}^np_i(n-i)=\sum_{i=1}^n\frac1n(n-i)=\frac1n\sum_{i=1}^n(n-i)=\frac1n\frac{n(n-1)}2=\frac{n-1}2$,则平均时间复杂度为$O(n)$.
 
-### 按位查找
+#### 按位查找
 
 由于顺序表支持随机存取,因此按位查找的代码为
 
@@ -197,9 +208,9 @@ int getElem(SqList &L, int idx)
 }
 ```
 
-### 按值查找
+#### 按值查找
 
-从头开始遍历顺序表,并且判断是否为目标元素。
+从头开始遍历顺序表,并且判断是否为目标元素.
 
 ```c++
 int locateELem(SqList &L, int tmp)
@@ -213,11 +224,11 @@ int locateELem(SqList &L, int tmp)
 
 根据查找位置的不同,对查找操作的时间复杂度进行如下分析：
 
-- 最好时间复杂度：查找位置在表头。
-- 最差时间复杂度：查找位置在表尾。
+- 最好时间复杂度：查找位置在表头.
+- 最差时间复杂度：查找位置在表尾.
 - 平均时间复杂度：设$p_i$为$i$点的查找的概率,则平均比较次数为 $\sum_{i=1}^{n}p_{i}\times i=\sum_{i=1}^{n}\frac{1}{n}\times i=\frac{1}{n}\sum_{i=1}^{n}i=\frac{1}{n}\times\frac{n(n+1)}{2}=\frac{n+1}{2} $, 平均时间复杂度为 $O(n)$
 
-### 清空
+#### 清空
 
 令`L.length`为 $0$ 即可
 
@@ -228,7 +239,7 @@ void clearList(SqList &L)
 }
 ```
 
-### 判空
+#### 判空
 
 判断`L.length`是否为 $0$ 即可
 
@@ -241,127 +252,21 @@ bool listEmpty(SqList L)
 }
 ```
 
-### 完整代码
+## <font color="red">线性表的链式存储-链表</font>
 
-```c++
-#include <bits/stdc++.h>
-#define int long long
-#define endl "\n"
-#define MAX_SIZE 100
-using namespace std;
-typedef struct
-{
-    int data[MAX_SIZE];
-    int length;
-    int size;
-} SqList;
-SqList *initList()
-{
-    SqList *L = (SqList *)malloc(sizeof(SqList));
-    L->length = 0;
-    L->size = MAX_SIZE;
-    return L;
-}
-int listLength(SqList &L)
-{
-    return L.length;
-}
-void listVisit(SqList &L)
-{
-    for (int i = 0; i < L.length; i++)
-        cout << L.data[i] << endl;
-}
-bool listInsert(SqList &L, int tmp, int idx)
-{
-    if (idx < 1 || idx > L.length + 1 || L.length >= MAX_SIZE)
-        return false;
-    for (int i = idx - 1; i > L.length; i--)
-        L.data[i] = L.data[i - 1];
-    L.data[idx - 1] = tmp;
-    L.length++;
-    return true;
-}
-bool ListDelete(SqList &L, int idx, int &tmp)
-{
-    if (idx < 1 || idx > L.length)
-        return false;
-    tmp = L.data[idx - 1];
-    for (int i = idx; i < L.length; i++)
-        L.data[i - 1] = L.data[i];
-    L.length--;
-    return true;
-}
-void clearList(SqList &L)
-{
-    L.length = 0;
-}
-bool listEmpty(SqList &L)
-{
-    if (L.length == 0)
-        return true;
-    return false;
-}
-int getElem(SqList &L, int idx)
-{
-    if (idx >= 0 && idx < L.length)
-        return L.data[idx];
-    else
-        return false;
-}
-int locateELem(SqList &L, int tmp)
-{
-    for (int i = 0; i < L.length; i++)
-        if (L.data[i] == tmp)
-            return i + 1;
-    return -1;
-}
-signed main()
-{
-    SqList *L = initList();
-    // Check initial length and emptiness
-    cout << "Length: " << listLength(*L) << endl;
-    cout << "Empty? " << (listEmpty(*L) ? "Yes" : "No") << endl;
-    // Insert elements
-    listInsert(*L, 0, 0);  // 非法操作,插入失败
-    listInsert(*L, 10, 1); // Insert 10 at position 1
-    listInsert(*L, 20, 2); // Insert 20 at position 2
-    listInsert(*L, 30, 3); // Insert 30 at position 3
-    listInsert(*L, 40, 4); // Insert 40 at position 4
-    listInsert(*L, 50, 5); // Insert 50 at position 5
-    // Check current length
-    cout << "Length after insertion: " << listLength(*L) << endl;
-    // Print the list
-    cout << "List content:" << endl;
-    listVisit(*L);
-    // Delete elements
-    int deletedElem;
-    ListDelete(*L, 2, deletedElem); // Delete at position 2
-    cout << "Deleted element: " << deletedElem << endl;
-    // Access element
-    listVisit(*L);
-    cout << "Element at position 1: " << getElem(*L, 1) << endl;
-    // Locate element
-    cout << "Position of element 20: " << locateELem(*L, 20) << endl;
-    cout << "Position of element 40: " << locateELem(*L, 40) << endl;
-    cout << "Empty? " << (listEmpty(*L) ? "Yes" : "No") << endl;
-    // Clear the list
-    clearList(*L);
-    // Check length and emptiness after clearing
-    cout << "Length after clearing: " << listLength(*L) << endl;
-    cout << "Empty after clearing? " << (listEmpty(*L) ? "Yes" : "No") << endl;
-    return 0;
-}
+### 链表的定义
 
-```
-
-# 线性表的链式存储-链表
-
-## 链表的定义
-
-线性表的链式存储即为单链表。
+线性表的链式存储即为单链表.
 
 ![20231210104419](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231210104419.png)
-其中 `data` 为数据域,`next` 为指针域。
+其中 `data` 为数据域,`next` 为指针域.
+![20240328152553](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328152553.png)
+![20240328152215](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328152215.png)
+
+- 利用单链表可以解决顺序表需要大量连续存储单元的缺点,但单链表附加指针域,也存在浪费存储空间的缺点
+- 链表中,**链表中每个结点间不一定连续,链表内一定连续**
+- 单链表是非随机存取的存储结构
+
 其结点描述为
 
 ```c++
@@ -374,22 +279,42 @@ typedef struct LNode
 
 > 注意:`next`是一个指针,指向后继结点的地址;
 > `LinkList` 与 `LNode*`是等价的,通常用 `LinkList` 表示单链表的头指针,`LinkNode*` 表示单链表结点的指针变量
-> 单链表是由表头指针唯一确定,因此单链表可以用头指针的名字来命名。若头指针名是 L,则简称该链表为表 L
+> 单链表是由表头指针唯一确定,因此单链表可以用头指针的名字来命名.若头指针名是 L,则简称该链表为表 L
 
-- 利用单链表可以解决顺序表需要大量连续存储单元的缺点,但单链表附加指针域,也存在浪费存储空间的缺点
-- 单链表是非随机存取的存储结构
+上述是一种定义的方法,除此之外下面的方法的更好
 
-## 链表的操作
+```c++
+typedef struct LNode
+{
+    Elemtype data;
+    struct LNode *next;
+} LNode;
+typedef struct LinkList
+{
+    LNode *head;
+    int length;
+} LinkedList;
+```
 
-### 单链表的初始化
+上述的写法是将链表与链表结点分开定义,写法的好处是可以将链表增加一些额外的功能,例如上述写法中增加了记录链表长度的功能,但是其实第一种定义方式也可以增加额外的功能,但是这会让存储密度降低,因为每次申请内存,都又额外申请了增加功能部分的内存.
 
-- 通常用头指针来标识一个单链表,如单链表$L$,头指针为 `NULL` 时表示一个空表。此外, 为了操作上的方便,在单链表第一个结点之前附加一个结点,称为头结点。头结点的数据域可以不设任何信息,也可以记录表长等信息。
+### 链表的操作
+
+#### 单链表的初始化
+
+- 通常用头指针来标识一个单链表,如单链表$L$,头指针为 `NULL` 时表示一个空表.此外, 为了操作上的方便,在单链表第一个结点之前附加一个结点,称为头结点.头结点的数据域可以不设任何信息,也可以记录表长等信息.
   ![20231210122808](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231210122808.png)
 - 头结点的优点
-  - 由于第一个数据结点的位置被存放在头结点的指针域中,因此在链表的第一个位置上的操作和在表的其他位置上的操作一致,无须进行特殊处理
-  - 无论链表是否为空,其头指针都是指向头结点的非空指针(空表中头结点的指针域为空), 因此空表和非空表的处理也就得到了统一
+  - 由于第一个数据结点的位置被存放在头结点的指针域中,因此在链表的第一个位置上的操作和在表的其他位置上的操作一致,**无须进行特殊处理**
+  - 无论链表是否为空,其头指针都是指向头结点的非空指针(空表中头结点的指针域为空), **因此空表和非空表的处理也就得到了统一**
+- 头结点的特点
+  - **头结点一般没有值域**
+  - 指向链表第一个指针的指针叫做头指针(上图中为`L`指针)
+  - 链表中第一个存放元素的结点叫做首元结点
+  - 对于带头结点的链表,头指针指向头结点
+  - 对于不带头结点的单链表,头指针指向首元结点
 
-#### 带头结点的初始化
+##### 带头结点的初始化
 
 ```c++
 LinkList initList()
@@ -401,10 +326,10 @@ LinkList initList()
 }
 ```
 
-对于存在头结点的单链表,如果变量`p`为指针,`*p`则表示结点本身,也就是`LNode`结构体。如果要访问`*p`这个结点的内部元素,则可以采用`(*p).data`,`(*p).next`
-相对与上述用法,当 `p` 为指针时,指向运算符`->`更常用：`p->data` 和`(*p).data`所表达的含义是完全相同的。通过`(*p).next` 可以得到指向下一个结点的指针,因此`(*(*p).next).data` 就是下一个结点中存放的数据,可以简化为 `p->next->data`,而`(*(*p).next).next` 可以简化为 `p->next->next`,其代表指向`p`结点的下下个结点的指针。
+对于存在头结点的单链表,如果变量`p`为指针,`*p`则表示结点本身,也就是`LNode`结构体.如果要访问`*p`这个结点的内部元素,则可以采用`(*p).data`,`(*p).next`
+相对与上述用法,当 `p` 为指针时,指向运算符`->`更常用：`p->data` 和`(*p).data`所表达的含义是完全相同的.通过`(*p).next` 可以得到指向下一个结点的指针,因此`(*(*p).next).data` 就是下一个结点中存放的数据,可以简化为 `p->next->data`,而`(*(*p).next).next` 可以简化为 `p->next->next`,其代表指向`p`结点的下下个结点的指针.
 
-#### 不带头结点的初始化
+##### 不带头结点的初始化
 
 ```c++
 LinkList initList()
@@ -414,7 +339,7 @@ LinkList initList()
 }
 ```
 
-### 按位查找结点
+#### 按位查找结点
 
 ![20231211035314](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231211035314.png)
 
@@ -430,7 +355,7 @@ LNode *GetElem(LinkList &L, int idx)
 }
 ```
 
-### 按值查找结点
+#### 按值查找结点
 
 ```c++
 LNode *LocateElem(LinkList &L, int tmp)
@@ -442,7 +367,7 @@ LNode *LocateElem(LinkList &L, int tmp)
 }
 ```
 
-### 插入结点
+#### 插入结点
 
 ![20231211071337](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231211071337.png)
 
@@ -466,7 +391,7 @@ bool listInsert(LinkList &L, int idx, int tmp)
 }
 ```
 
-### 遍历输出单链表
+#### 遍历输出单链表
 
 ```c++
 void listVisit(LinkList &L)
@@ -482,7 +407,7 @@ void listVisit(LinkList &L)
 }
 ```
 
-### 删除结点
+#### 删除结点
 
 ![20231211071419](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231211071419.png)
 
@@ -505,7 +430,7 @@ bool listDelte(LinkList &L, int idx)
 }
 ```
 
-### 求表长
+#### 求表长
 
 ```c++
 int listLength(LinkList &L)
@@ -519,7 +444,7 @@ int listLength(LinkList &L)
 }
 ```
 
-### 清空
+#### 清空
 
 ```c++
 void clearList(LinkList &L)
@@ -537,7 +462,7 @@ void clearList(LinkList &L)
 }
 ```
 
-### 判空
+#### 判空
 
 ```c++
 bool listEmpty(LinkList L)
@@ -550,173 +475,26 @@ bool listEmpty(LinkList L)
 }
 ```
 
-### 完整代码
-
-```c++
-#include <bits/stdc++.h>
-#define int long long
-#define endl "\n"
-using namespace std;
-typedef struct LNode
-{
-	int data;
-	struct LNode *next;
-} LNode, *LinkList;
-LinkList initList()
-{
-	LNode *p = (LNode *)malloc(sizeof(LNode));
-	p->next = NULL;
-	p->data = 0;
-	return p;
-}
-LNode *GetElem(LinkList &L, int idx)
-{
-	if (idx < 1)
-		return NULL;
-	LNode *p = L->next;
-	for (int i = 0; i < idx; i++)
-		p = p->next;
-	return p;
-}
-LNode *LocateElem(LinkList &L, int tmp)
-{
-	LNode *p = L->next;
-	while (p != NULL && p->data != tmp)
-		p = p->next;
-	return p;
-}
-bool listInsert(LinkList &L, int idx, int tmp)
-{
-	LNode *p = L;
-	for (int i = 0; i < idx; i++)
-	{
-		p = p->next;
-		if (p == NULL)
-			return false;
-	}
-	LNode *q = (LNode *)malloc(sizeof(LNode));
-	q->data = tmp;
-	q->next = p->next;
-	p->next = q;
-	return true;
-}
-void listVisit(LinkList &L)
-{
-	// LNode *p=L; 无头结点的情况
-	LNode *p = L->next; // 有头结点的情况
-	while (p != NULL)
-	{
-		cout << p->data << ' ';
-		p = p->next;
-	}
-	cout << endl;
-}
-bool listDelte(LinkList &L, int idx)
-{
-	LNode *p = L;
-	for (int i = 0; i < idx; i++)
-	{
-		p = p->next;
-		if (p == NULL)
-			return false;
-	}
-	if (p->next == NULL)
-		return false;
-	LNode *q = p->next;
-	p->next = q->next;
-	free(q);
-	return true;
-}
-int listLength(LinkList &L)
-{
-	// LNode *p=L; 无头结点
-	LNode *p = L->next; // 有头结点的
-	int count;
-	for (count = 0; p != NULL; count++)
-		p = p->next;
-	return count;
-}
-void clearList(LinkList &L)
-{
-	// LNode *p = *L; 无头结点
-	LNode *p = L->next;
-	while (p != NULL)
-	{
-		LNode *tmp = p->next;
-		free(p);
-		p = tmp;
-	}
-	L->next = NULL; // 有头结点
-					// L=NULL; 无头结点
-}
-bool listEmpty(LinkList L)
-{
-	// LNode *p = L; 无头结点
-	LNode *p = L->next; // 有头结点
-	if (p == NULL)
-		return true;
-	return false;
-}
-signed main()
-{
-	ios::sync_with_stdio(false);
-	cin.tie(nullptr);
-	LinkList L = initList();
-	// 测试插入函数
-	listInsert(L, 0, 10);
-	listInsert(L, 0, 20);
-	listInsert(L, 0, 30);
-	listVisit(L);
-	int length = listLength(L);
-	cout << "List length: " << length << endl;
-	// 测试获取元素函数
-	LNode *node = GetElem(L, 2);
-	if (node)
-		cout << "Node at index 2: " << node->data << endl;
-	else
-		cout << "Node not found at index 2" << endl;
-	// 测试查找元素函数
-	node = LocateElem(L, 20);
-	if (node)
-		cout << "Found node with data 20" << endl;
-	else
-		cout << "Node with data 20 not found" << endl;
-	// 测试删除元素函数
-	listDelte(L, 2);
-	// 测试链表长度函数
-	length = listLength(L);
-	cout << "List length: " << length << endl;
-	// 测试清空链表函数
-	clearList(L);
-	// 测试空链表函数
-	if (listEmpty(L))
-		cout << "List is empty" << endl;
-	else
-		cout << "List is not empty" << endl;
-	return 0;
-}
-```
-
-### 单链表的其他算法
+### <font color="red">单链表的其他算法</font>
 
 #### 头插法建立单链表
 
 ![20231211071946](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231211071946.png)
 头插法每次插入元素的时间复杂度为$O(1)$,因为每次都是在第一个地方插入元素,不需要进行`for`循环
-头插法的代码只需要调用上述插入代码,可以以`listInsert(L,0,e)`调用即可。每次在
+头插法的代码只需要调用上述插入代码,可以以`listInsert(L,0,e)`调用即可.每次在
 
 #### 尾插法建立单链表
 
 ![20231211071959](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231211071959.png)
 
-尾插法的代码只需要调用上述插入代码,可以以`listInsert(L,i,e)`调用即可。
+尾插法的代码只需要调用上述插入代码,可以以`listInsert(L,i,e)`调用即可.
 
-表示在链表`L`的首位置插入元素`e`。尾插法的时间复杂度为 $O(n)$。但是可以进行优化,可以用一个指针`rear`永远指向链表的最后一个元素,这样省去了查找元素的时间,尾插法时间复杂度变成了$O(1)$。
+表示在链表`L`的首位置插入元素`e`.尾插法的时间复杂度为 $O(n)$.但是可以进行优化,可以用一个指针`rear`永远指向链表的最后一个元素,这样省去了查找元素的时间,尾插法时间复杂度变成了$O(1)$.
 
 #### 原地倒置单链表
 
-- 此时需要两个额外的指针来在原链表的基础上进行修改。
-- 原理是每次摘出来一个结点当作头结点。
+- 此时需要两个额外的指针来在原链表的基础上进行修改.
+- 原理是每次摘出来一个结点当作头结点.
 
 1. 初始状态下,令 `beg` 指向第一个节点,`end` 指向 `beg->next`
    ![20231217144649](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231217144649.png)
@@ -751,17 +529,22 @@ link * local_reverse(link * head) {
 
 #### 双指针遍历单链表
 
-- 找链表倒数第$k$个结点：在第一个指针到达正数第$k$个结点时,派出第二个指针,让两个指针始终保持着$k$的距离。那么当第一个指针到达链表尾时,第二个指针正好在倒数第$k$个结点上。
-- 找到链表中间的结点：可以使用快慢指针的概念,设置`p`,`q`两个指向链表结点的指针,`p`每走两步,`q`走一步。当 `p` 到达链表末尾时,`q` 正好指在链表的中间结点。
-- 判断链表是否有环：当链表有环时,必能使得快慢指针在$O(n)$的时间复杂度内相遇。
+- 找链表倒数第$k$个结点：在第一个指针到达正数第$k$个结点时,派出第二个指针,让两个指针始终保持着$k$的距离.那么当第一个指针到达链表尾时,第二个指针正好在倒数第$k$个结点上.
+- 找到链表中间的结点：可以使用快慢指针的概念,设置`p`,`q`两个指向链表结点的指针,`p`每走两步,`q`走一步.当 `p` 到达链表末尾时,`q` 正好指在链表的中间结点.
+- 判断链表是否有环：当链表有环时,必能使得快慢指针在$O(n)$的时间复杂度内相遇.
 
-# 特殊链表
+## <font color="red">特殊链表</font>
 
-## 双链表
+### 双链表
 
-### 双链表定义
+#### 双链表定义
 
-![20231217151216](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231217151216.png)
+![20240328152806](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328152806.png)
+双链表中结点的结构
+![20240328152754](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328152754.png)
+上图为带头结点的双链表
+![20240328152839](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328152839.png)
+上图为不带头结点的双链表
 双链表的描述如下
 
 ```c++
@@ -772,13 +555,29 @@ typedef struct DlinkNode
 } DlinkNode, *DlinkList;
 ```
 
+双链表结点与链表分开定义
+
+```c++
+typedef struct DNode
+{
+    Elemtype data;
+    struct DNode *prior;
+    struct DNode *next;
+} DNode; // 节点
+typedef struct DLinkedList
+{
+    DNode *prior;
+    DNode *next;
+} DLinkedList; // 双链表
+```
+
 在双链表中,每个结点包含三个部分
 
 1. 指向当前结点前驱结点的指针
 2. 当前结点存储数据的数据域
 3. 指向当前结点后继结点的指针
 
-### 双链表的插入操作
+#### 双链表的插入操作
 
 ![20231217170219](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231217170219.png)
 
@@ -799,7 +598,7 @@ p->next = q;
 q->prev = p;
 ```
 
-### 双链表的删除操作
+#### 双链表的删除操作
 
 ```c++
 // 删除q结点,不引入s结点
@@ -812,17 +611,21 @@ p->next = s;
 s->prev = p;
 ```
 
-## 循环链表
+### 循环链表
 
 ![20231218134508](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218134508.png)
+![20240328154536](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328154536.png)
+
+- 在循环单链表 L 中：`L.next==a_1`,`尾结点.next==L`
+  ![20240328154555](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240328154555.png)
 
 - 在循环双链表 L 中,某结点`*p`为尾结点时,`p->next==L`
 - 当循环双链表为空表时,其头结点的`prior`域和`next`都等于 L
 
-## 静态链表
+### 静态链表
 
 ![20231218140207](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218140207.png)
-静态链表借助数组来描述线性表的链式存储结构,结点也有数据域 `data` 和指针域 `next`,这里的指针是结点的相对地址(数组下标),又称游标。和顺序表一样,静态链表也要预先分配一块连续的内存空间。
+静态链表借助数组来描述线性表的链式存储结构,结点也有数据域 `data` 和指针域 `next`,这里的指针是结点的相对地址(数组下标),又称游标.和顺序表一样,静态链表也要预先分配一块连续的内存空间.
 静态链表结构类型的描述如下
 
 ```c++
@@ -834,23 +637,33 @@ typedef struct		// 静态链表结构类型的定义
 } SLinkList[MaxSize];
 ```
 
-静态链表的插入,删除操作与动态链表的相同,只需要修改指针,而不需要移动元素。
+静态链表的插入,删除操作与动态链表的相同,只需要修改指针,而不需要移动元素.
 
-# 顺序存储(顺序表)和链式存储(链表)的比较
+# <font color="red">顺序存储(顺序表)和链式存储(链表)的比较</font>
 
-|                     |                                                                                   顺序表                                                                                   |                                                                        链表                                                                        |
-| :-----------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------: |
-|   存取(读写)方式    |                                                                     顺序表可以顺序存取,也可以随机存取                                                                      |                                                             链表只能从表头顺序存取元素                                                             |
-| 逻辑结构与物理结构  |                                                          采用顺序存储时,逻辑上相邻的元素,对应的物理存储位置也相邻                                                          |                                               采用链式存储时,逻辑上相邻的元素,物理存储位置不一定相邻                                               |
-| 查找,插入和删除操作 | 对于按值查找,顺序表无序时,两者的时间复杂度均为 $O(n)$;顺序表有序时,可采用折半查找,此时的时间复杂度为 $O(log_n)$。对于按序号查找,顺序表支持随机访问,时间复杂度仅为 $O(1)$。 | 对于按序号查找,链表的平均时间复杂度 $O(n)$。链表的插入、删除操作,只需修改相关结点的指针域即可。由于链表的每个结点都带有指针域,故而存储密度不够大。 |
-|      空间分配       |       顺序存储在静态存储分配情形下,一旦存储空间装满就不能扩充,若再加入新元素,则会出现内存溢出。动态存储分配虽然存储空间可以扩充,但需要移动大量元素,导致操作效率降低        |                                    链式存储的结点空间只在需要时申请分配,只要内存有空间就可以分配,操作灵活、高效                                    |
+|                     |                                                                                  顺序表                                                                                  |                                                                      链表                                                                       |
+| :-----------------: | :----------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :---------------------------------------------------------------------------------------------------------------------------------------------: |
+|   存取(读写)方式    |                                                                    顺序表可以顺序存取,也可以随机存取                                                                     |                                                           链表只能从表头顺序存取元素                                                            |
+| 逻辑结构与物理结构  |                                                         采用顺序存储时,逻辑上相邻的元素,对应的物理存储位置也相邻                                                         |                                             采用链式存储时,逻辑上相邻的元素,物理存储位置不一定相邻                                              |
+| 查找,插入和删除操作 | 对于按值查找,顺序表无序时,两者的时间复杂度均为 $O(n)$;顺序表有序时,可采用折半查找,此时的时间复杂度为 $O(log_n)$.对于按序号查找,顺序表支持随机访问,时间复杂度仅为 $O(1)$. | 对于按序号查找,链表的平均时间复杂度 $O(n)$.链表的插入、删除操作,只需修改相关结点的指针域即可.由于链表的每个结点都带有指针域,故而存储密度不够大. |
+|      空间分配       |       顺序存储在静态存储分配情形下,一旦存储空间装满就不能扩充,若再加入新元素,则会出现内存溢出.动态存储分配虽然存储空间可以扩充,但需要移动大量元素,导致操作效率降低       |                                  链式存储的结点空间只在需要时申请分配,只要内存有空间就可以分配,操作灵活、高效                                   |
 
-# 线性表的总结
+# <font color="red">线性表的总结</font>
 
-|          | 顺序表                           | 单链表                           | 双链表                                                       | 循环链表                                                 | 静态链表                                                     |
-| :------: | -------------------------------- | -------------------------------- | ------------------------------------------------------------ | -------------------------------------------------------- | ------------------------------------------------------------ |
-| 存储地址 | 连续                             | 非连续                           | 非连续                                                       | 非连续                                                   | 连续                                                         |
-| 存储密度 | $=1$                             | $<1$                             | $<1$                                                         | $<1$                                                     | $<1$                                                         |
-| 存取方式 | 顺序或随机                       | 顺序                             | 顺序                                                         | 顺序                                                     | 顺序                                                         |
-|   优点   | 顺序存储可随机存取               | 链式存储插入删除更加方便         | 相比于单链表可以更轻松的访问前驱结点                         | 相比于普通链表可以循环访问                               | 可以在没有指针的语言中表示链表,同时有链表的优点             |
-|   缺点   | 插入删除开销大,扩展存储空间麻烦 | 比线性表存储密度小,无法随机存取 | 比单链表存储密度更小,无法随机存取。相较于单链表可安全地按位置前插和删除 | 没有明确的链表尾,在单次遍历循环链表时需小心设置结束条件 | 存储在连续地址内但失去了随机存取的特性,且需手动控制内存分配与回收流程, 时间效率较低 |
+|          | 顺序表                          | 单链表                          | 双链表                                                                 | 循环链表                                                | 静态链表                                                                            |
+| :------: | ------------------------------- | ------------------------------- | ---------------------------------------------------------------------- | ------------------------------------------------------- | ----------------------------------------------------------------------------------- |
+| 存储地址 | 连续                            | 非连续                          | 非连续                                                                 | 非连续                                                  | 连续                                                                                |
+| 存储密度 | $=1$                            | $<1$                            | $<1$                                                                   | $<1$                                                    | $<1$                                                                                |
+| 存取方式 | 顺序或随机                      | 顺序                            | 顺序                                                                   | 顺序                                                    | 顺序                                                                                |
+|   优点   | 顺序存储可随机存取              | 链式存储插入删除更加方便        | 相比于单链表可以更轻松的访问前驱结点                                   | 相比于普通链表可以循环访问                              | 可以在没有指针的语言中表示链表,同时有链表的优点                                     |
+|   缺点   | 插入删除开销大,扩展存储空间麻烦 | 比线性表存储密度小,无法随机存取 | 比单链表存储密度更小,无法随机存取.相较于单链表可安全地按位置前插和删除 | 没有明确的链表尾,在单次遍历循环链表时需小心设置结束条件 | 存储在连续地址内但失去了随机存取的特性,且需手动控制内存分配与回收流程, 时间效率较低 |
+
+# 本章易错总结
+
+1. 什么是随机存取、顺序存取?
+   - 随机存取就是直接存取,可以通过下标直接访问的那种数据结构,与存储位置无关,例如数组.
+   - 非随机存取就是顺序存取,不能通过下标访问了,只能按照存储顺序存取,与存储位置有关,例如链表.顺序存取就是存取第 N 个数据时,必须先访问前(N-1)个数据 (list),随机存取就是存取第 N 个数据时.
+     ![20240329100650](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240329100650.png)
+2. 有序与顺序?
+   - 有序指的是逻辑关系,顺序指的是物理关系 
+   - 有序表是指表中所有数据元素的数值以递增或递减方式有序排列,是数据元素的数值的有序性.有序表只描述元素之间的逻辑关系,故为逻辑结构,因此有序表既可以顺序存储也可以链式存储.
