--- a/408数据结构/Note/栈,队列.md
+++ b/408数据结构/Note/栈,队列.md
@@ -4,22 +4,22 @@
 
 ![20231218150454](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218150454.png)
 
-- **栈是只允许在一端进行插入或删除操作的线性表。**
+- **栈是只允许在一端进行插入或删除操作的线性表.**
 - 栈的特点：
   - 栈顶：线性表允许进行插入删除的那一端
   - 栈底：固定的,不允许进行插入和删除的另一端
   - 空栈：不含任何元素的空表
 
-假设某个栈 $S=(a_1,a_2,a_3,a_4,a_5)$,则 $a_1$ 为栈底元素,$a_5$ 为栈顶元素。由于栈只能在栈顶进行插入和删除操作,进栈次序依次为 $(a_1,a_2,a_3,a_4,a_5)$，而出栈次序为 $(a_5,a_4,a_3,a_2,a_1)$。由此可见,栈的操作特性可以明显地概括为**后进先出** $(Last \ In \ First \ Out, LIFO)$。
+假设某个栈 $S=(a_1,a_2,a_3,a_4,a_5)$,则 $a_1$ 为栈底元素,$a_5$ 为栈顶元素.由于栈只能在栈顶进行插入和删除操作,进栈次序依次为 $(a_1,a_2,a_3,a_4,a_5)$，而出栈次序为 $(a_5,a_4,a_3,a_2,a_1)$.由此可见,栈的操作特性可以明显地概括为**后进先出** $(Last \ In \ First \ Out, LIFO)$.
 
-> 栈的数学性质:$n$个不同元素进栈，出栈元素不同排列的个数为$\frac{1}{n+1}C_{2n}^n$。上述公式称为**卡特兰数**。
+> 栈的数学性质:$n$个不同元素进栈，出栈元素不同排列的个数为$\frac{1}{n+1}C_{2n}^n$.上述公式称为**卡特兰数**.
 
 ## 栈的实现
 
 ### 顺序栈
 
 ![20231218212717](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218212717.png)
-采用顺序存储的栈称为顺序栈,它利用一组地址连续的存储单元存放自栈底到栈顶的数据元素,同时附设一个指针(top)指示当前栈顶元素的位置。
+采用顺序存储的栈称为顺序栈,它利用一组地址连续的存储单元存放自栈底到栈顶的数据元素,同时附设一个指针(top)指示当前栈顶元素的位置.
 
 ```c++
 // 该栈为顺序栈
@@ -31,13 +31,17 @@ typedef struct
 } SqStack;
 ```
 
-- 栈顶指针:`S.top`,初始时设置 `S.top = -1`;栈顶元素:`S.data [S.top]`。
-- 进栈操作:栈不满时,栈顶指针先加 1,再送值到栈顶元素。
-- 出栈操作:栈非空时,先取栈顶元素值,再将栈顶指针减 1。
-- 栈空条件:`S.top == -1`;栈满条件:`S.top == MaxSize - 1`;栈长:`S.top+1`。
+- 栈顶指针:`S.top`,初始时设置 `S.top = -1`;栈顶元素:`S.data [S.top]`.
+- 进栈操作:栈不满时,栈顶指针先加 1,再送值到栈顶元素.
+- 出栈操作:栈非空时,先取栈顶元素值,再将栈顶指针减 1.
+- 栈空条件:`S.top == -1`;栈满条件:`S.top == MaxSize - 1`;栈长:`S.top+1`.
+
+<font color="red">元素的出栈和入栈部分需要注意点是:这里的`top`指的是栈顶元素.于是,进栈操作为`S.data[++S.top]=x`,出栈操作 `S.data[S.top--]`.若栈顶指针初始化为 `S.top=0`,即 `top` 指向栈项元素的下一位置入栈操作变为 `S.data[s.top++]=x`:出栈操作变为 `x=S.data[--S.top]`.相应的栈空栈满条件也会发生变化.</font>具体栈的空操作如下图所示:
+![20240413154246](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413154246.png)
 
 ### 链栈
 
+采用链式存储的栈称为链栈,**链栈的优点是便于多个栈共享存储空间和提高其效率,且不存在栈满上溢的情况**.通常采用**单链表实现**,并规定所有操作都是在**单链表的表头**进行的.这里规定链栈没有头结点,Lhead 指向栈顶元素.
 ![20231218212908](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218212908.png)
 
 ```c++
@@ -45,7 +49,7 @@ typedef struct
 typedef struct LinkNode{
     ElemType data;// 数据域
     struct LinkNode *next;// 指针域
-}*LiStack;// 栈类型定义
+}LiStack;// 栈类型定义
 ```
 
 ## 栈的操作
@@ -100,7 +104,7 @@ bool Push(SqStack &S, int x)
 }
 ```
 
-> 在栈初始化时也可让`top == MaxSize`，每次插入元素时，`top` 向低地址方向移动，即"栈从高地址向低地址增长"。进程在虚拟地址空间中所拥有的栈区就是从高地址向低地址增长。
+> 在栈初始化时也可让`top == MaxSize`，每次插入元素时，`top` 向低地址方向移动，即"栈从高地址向低地址增长".进程在虚拟地址空间中所拥有的栈区就是从高地址向低地址增长.
 
 #### 出栈
 
@@ -137,84 +141,6 @@ int GetTop(SqStack &S, int x)
 }
 ```
 
-#### 完整代码
-
-```c++
-#pragma GCC optimize(3,"Ofast","inline")
-#include <bits/stdc++.h>
-#define int long long
-#define endl "\n"
-using namespace std;
-#define MaxSize 100 // 定义栈中元素的最大个数
-typedef struct
-{
-	int data[MaxSize]; // 存放栈中元素
-	int top;		   // 栈顶指针
-} SqStack;
-void InitStack(SqStack &S)
-{
-	S.top = -1; // 初始化栈顶指针
-}
-bool StackEmpty(SqStack &S)
-{
-	if (S.top == -1) // 栈空
-		return true;
-	else // 不空
-		return false;
-}
-bool Push(SqStack &S, int x)
-{
-	if (S.top == MaxSize - 1) // 栈满
-		return false;
-	S.data[++S.top] = x; // 指针加一后入栈
-	return true;
-}
-int Pop(SqStack &S, int x)
-{
-	if (S.top == -1)
-		return false;	 // 栈空
-	x = S.data[S.top--]; // 先出栈,指针再减1
-	return x;
-}
-int GetTop(SqStack &S, int x)
-{
-	if (S.top == -1) // 栈空,报错
-		return false;
-	x = S.data[S.top]; // x 记录栈顶元素
-	return x;
-}
-signed main()
-{
-	ios::sync_with_stdio(false);
-	cin.tie(nullptr);
-	SqStack S;
-	InitStack(S);
-
-	// 测试 Push()
-	cout << "测试 Push():" << endl;
-	Push(S, 1);
-	Push(S, 2);
-	Push(S, 3);
-	Push(S, 4);
-	if (StackEmpty(S) == false)
-		cout << "Push() 测试成功" << endl;
-	else
-		cout << "Push() 测试失败" << endl;
-	cout << "栈顶元素为：" << S.data[S.top] << endl;
-
-	// 测试 Pop()
-	cout << "测试 Pop():" << endl;
-	int x;
-	cout << "出栈元素为：" << Pop(S, x) << endl;
-	cout << "出栈元素为：" << Pop(S, x) << endl;
-
-	// 测试 GetTop()
-	cout << "测试 GetTop():" << endl;
-	cout << "栈顶元素为：" << GetTop(S, x) << endl;
-	return 0;
-}
-```
-
 ### 链栈的操作
 
 #### 元素进栈
@@ -236,7 +162,7 @@ bool push(LinkStack &S, int e)
 #### 元素出栈
 
 ```c++
-ElemType pop(LinkStack &S)
+bool pop(LinkStack &S)
 {
 	if (StackEmpty(&S))
 		return false;
@@ -253,7 +179,7 @@ ElemType pop(LinkStack &S)
 ### 共享栈
 
 ![20231218213245](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231218213245.png)
-将两个栈放在同一段存储空间中，分别让两个栈从两端开始往中间增长，这种栈被称为共享栈。
+将两个栈放在同一段存储空间中，分别让两个栈从两端开始往中间增长，这种栈被称为共享栈.
 
 # 队列
 
@@ -272,7 +198,7 @@ ElemType pop(LinkStack &S)
 
 ### 顺序队列
 
-采用顺序存储结构的队列称为顺序队列，它利用一组地址连续的存储单元存放整个队列的数据元素，并且使用队头指针`front`和队尾指针`rear`定位队头和队尾。顺序队列的结构定义如下:
+采用顺序存储结构的队列称为顺序队列，它利用一组地址连续的存储单元存放整个队列的数据元素，并且使用队头指针`front`和队尾指针`rear`定位队头和队尾,**队头指针 `front` 指向队头元素,队尾指针`rear`指向队尾元素的下一个位置**(不同教材对 front 和 rear 的定义可能不同).顺序队列的结构定义如下:
 
 ```c++
 #define MaxSize 100 // 定义队列中元素的最大个数
@@ -283,16 +209,18 @@ typedef struct
 } SqQueue;
 ```
 
-- 初始状态:`Q.front = Q.rear = 0`
-- 进队操作:队不满时,先送值到队尾元素，再将队尾指针加 1
-- 出队操作:队不满时，先取队头元素值，再将队头指针加 1
+- **初始状态:`Q.front = Q.rear = 0`**
+- **进队操作:队不满时,先送值到队尾元素，再将队尾指针加 1**
+- **出队操作:队不满时，先取队头元素值，再将队头指针加 1**
 
 ![20231219093702](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20231219093702.png)
-从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`。但是在上面的 d 图中，队列中仅有一个元素，但是依然满足上述条件。因此这时叫做"假溢出"。因此为了解决这个问题需要使用循环队列来解决。
+从上面的进队和出队操作可以看到不能使用`Q.rear==MaxSize`.但是在上面的 d 图中，队列中仅有一个元素，但是依然满足上述条件.因此这时叫做"假溢出".因此为了解决这个问题需要使用循环队列来解决.
 
 ### 链式队列
 
-队列可由队头指针和队尾指针代表整个链表，因此将队头指针和队尾指针放入一个结构体用来表示队列。
+![20240413164408](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164408.png)
+![20240413164745](https://yjc-figure.oss-cn-beijing.aliyuncs.com/20240413164745.png)
+队列可由队头指针和队尾指针代表整个链表，因此将队头指针和队尾指针放入一个结构体用来表示队列.
 
 ```c++
 typedef struct LinkNode // 链队列的结点
@@ -360,89 +288,14 @@ bool DeQueue(LinkQueue &Q)
 }
 ```
 
-#### 完整代码
-
-```c++
-`#include <bits/stdc++.h>
-#define int long long
-#define endl "\n"
-using namespace std;
-typedef struct LinkNode // 链队列的结点
-{
-	int data;
-	struct LinkNode *next;
-} LinkNode;
-typedef struct // 链式队列
-{
-	LinkNode *front, *rear; // 头尾指针
-} LinkQueue;
-void InitQueue(LinkQueue &Q)
-{
-	Q.front = Q.rear = (LinkNode *)malloc(sizeof(LinkNode)); // 建立头结点
-	Q.front->next = NULL;									 // 初始为空
-}
-bool IsEmpty(LinkQueue &Q)
-{
-	if (Q.front == Q.rear)
-		return true;
-	else
-		return false;
-}
-void EnQueue(LinkQueue &Q, int x)
-{
-	LinkNode *s = (LinkNode *)malloc(sizeof(LinkNode));
-	s->data = x, s->next = NULL; // 创建新结点,插入到链尾
-	Q.rear->next = s;
-	Q.rear = s;
-}
-bool DeQueue(LinkQueue &Q)
-{
-	if (Q.front == Q.rear)
-		return false; // 空队
-	LinkNode *p = Q.front->next;
-	Q.front->next = p->next;
-	if (Q.rear == p)
-		Q.rear = Q.front; // 若原队列中只有以歌结点，删除后变空
-	free(p);
-	return true;
-}
-void VisitQueue(LinkQueue &Q)
-{
-	LinkNode *p = Q.front;
-	while (p != Q.rear)
-	{
-		p = p->next;
-		cout << p->data << ' ';
-	}
-	cout << endl;
-}
-signed main()
-{
-	ios::sync_with_stdio(false);
-	cin.tie(nullptr);
-	LinkQueue q;
-	InitQueue(q);
-	cout << IsEmpty(q) << endl;
-	for (int i = 0; i <= 10; i++)
-		EnQueue(q, i);
-	VisitQueue(q);
-	cout << IsEmpty(q) << endl;
-	DeQueue(q), VisitQueue(q);
-	DeQueue(q), VisitQueue(q);
-	DeQueue(q), VisitQueue(q);
-	DeQueue(q), VisitQueue(q);
-	return 0;
-}
-```
-
 ## 特殊队列
 
 ### 循环队列
 
 #### 循环队列的定义
 
-- 为了解决上面队列的"假溢出"的情况，可以使用循环队列的方式来解决。
-- 即把存储队列元素的表从逻辑上视为一个环，称为循环队列。
+- 为了解决上面队列的"假溢出"的情况，可以使用循环队列的方式来解决.
+- 即把存储队列元素的表从逻辑上视为一个环，称为循环队列.
 
 ```c++
 #define MaxSize 100 // 定义队列中元素的最大个数
@@ -452,6 +305,14 @@ typedef struct
 	int front, rear;   // 队头指针和队尾指针
 } SqQueue;
 ```
+
+**特定条件下循环队列对头和队尾指针的初值:**
+
+- 初始时:`Q.front=Q.rear=0`
+- 队首指针进 1:`Q.front=(Q.front+1)%MaxSize`
+- 队尾指针进 1:`Q.rear=(Q.rear+1)%MaxSize`
+- 队列长度:`(Q.rear+Maxsize-Q.front)%Maxsize`
+- 出队入队时:指针都按顺时针方向进 1
 
 #### 循环队列的基本操作
 
@@ -486,8 +347,8 @@ bool IsEmpty(SqQueue &Q)
 }
 ```
 
-- 类型中增设表示元素个数的数据成员。这样,队空的条件为 `Q.size==0`;队满的条件为 `Q.size==Maxsize`。这两种情况都有 `Q.front==Q.rear`
-- 类型中增设 tag 数据成员,以区分是队满还是队空。tag 等于 0 时,若因删除导致 `Q.front==Q.rear`,则为队空;tag 等于 1 时,若因插入导致 `Q.front==Q.rear`,则为队满
+- 类型中增设表示元素个数的数据成员.这样,队空的条件为 `Q.size==0`;队满的条件为 `Q.size==Maxsize`.这两种情况都有 `Q.front==Q.rear`
+- 类型中增设 tag 数据成员,以区分是队满还是队空.tag 等于 0 时,若因删除导致 `Q.front==Q.rear`,则为队空;tag 等于 1 时,若因插入导致 `Q.front==Q.rear`,则为队满
 
 ##### 元素入队
 
@@ -508,7 +369,7 @@ bool EnQueue(SqQueue &Q, int x)
 bool DeQueue(SqQueue &Q)
 {
 	if (Q.rear == Q.front)
-		return false;				   // 队空则报错
+		return false;// 队空则报错
 	Q.front = (Q.front + 1) % MaxSize; // 队头指针加1取模
 	return true;
 }
@@ -520,71 +381,6 @@ bool DeQueue(SqQueue &Q)
 int CountQueue(SqQueue &Q)
 {
     return (Q.rear + MaxSize - Q.front) % MaxSize;
-}
-```
-
-##### 完整代码
-
-```c++
-#include <bits/stdc++.h>
-#define int long long
-#define endl "\n"
-using namespace std;
-#define MaxSize 100 // 定义队列中元素的最大个数
-typedef struct
-{
-    int data[MaxSize]; // 存放队列元素
-    int front, rear;   // 队头指针和队尾指针
-} SqQueue;
-void InitQueue(SqQueue &Q)
-{
-    Q.rear = Q.front = 0; // 初始化队首,队尾指针
-}
-bool IsEmpty(SqQueue &Q)
-{
-    if (Q.rear == Q.front)
-        return true;
-    else
-        return false;
-}
-bool EnQueue(SqQueue &Q, int x)
-{
-    if ((Q.rear + 1) % MaxSize == Q.front)
-        return false; // 队满则报错
-    Q.data[Q.rear] = x;
-    Q.rear = (Q.rear + 1) % MaxSize; // 队尾指针加1取模
-    return true;
-}
-bool DeQueue(SqQueue &Q)
-{
-    if (Q.rear == Q.front)
-        return false;                  // 队空则报错
-    Q.front = (Q.front + 1) % MaxSize; // 队头指针加1取模
-    return true;
-}
-int CountQueue(SqQueue &Q)
-{
-    return (Q.rear + MaxSize - Q.front) % MaxSize;
-}
-signed main()
-{
-    ios::sync_with_stdio(false);
-    cin.tie(nullptr);
-    SqQueue q;
-    InitQueue(q);
-    cout << IsEmpty(q) << endl;
-    for (int i = 0; i < 10; i++)
-    {
-        EnQueue(q, i);
-        cout << q.data[q.rear - 1] << endl; // 依次输出队列中所有元素
-    }
-    cout << CountQueue(q) << endl;
-    DeQueue(q);
-    cout << CountQueue(q) << endl;
-    for (int i = 0; i < 10; i++)
-        cout << q.data[q.rear - 1] << endl; // 依次输出队列中所有元素
-    cout << CountQueue(q) << endl;
-    return 0;
 }
 ```
 
@@ -605,3 +401,7 @@ signed main()
 ## 层次遍历
 
 # 数组与矩阵
+
+# 易错总结
+- 区别`A[0...n]`和`A[n]`
+- 
